Updates from Overleaf

--- a/main/ch1_introduction.tex
+++ b/main/ch1_introduction.tex
@@ -4,22 +4,22 @@
 \markboth{Introduction}{Introduction}
 %\addcontentsline{toc}{chapter}{Introduction}
 
-
+\vspace{-1cm}
 
 \section{Motivation}
 
 % Describe preterm birth
-Preterm birth  (PTB) --- characterised as birth before 37 full weeks of gestation --- affects an estimated 11.1\% of all live births, which corresponds to nearly 15 million babies per year \citep{Blencowe2013}. 
-This comes with a heavy societal burden as it is one of the predominant risk factors for neurodevelopmental disorders \citep{Twilhaar2018}, besides increasing the neonatal and post-discharge costs up to 33 times \citep{Tommiska2003} as compared to term birth. %Economic costs of care in extremely low birth weight infants during the first 2 years of life 
+Preterm birth  (PTB) --- characterised as birth before 37 full weeks of gestation --- affects an estimated 7\% of births in Switzerland, and 11.1\% of all live births worldwide, which corresponds to nearly 15 million babies per year \citep{Blencowe2013}. 
+This comes with a heavy societal burden as it is one of the predominant risk factors behind neurodevelopmental disorders \citep{Pierrat2017,Twilhaar2018}, besides increasing the neonatal and post-discharge costs up to 33 times \citep{Tommiska2003} as compared to term birth. %Economic costs of care in extremely low birth weight infants during the first 2 years of life 
 PTB has been associated with a wide range of impairments in cognitive functions spanning attention \citep{Rommel2017}, working memory \citep{Allotey2018}, affective behaviour \citep{Hornman2016}, executive functions \citep{Costa2017, Burnett2018}, among others \citep{Moreira2014, Allotey2018}. 
-Often unveiled only when children reach school age, some of these difficulties may persist throughout life \citep{Anderson2014, Kajantie2019}. Understanding the neurological underpinnings of these difficulties is thus crucial to identify potential interventions and establish critical periods to restore typical development \citep{Wolke2019}.
+Often unveiled only when children reach school age, some of these difficulties may persist throughout life \citep{Anderson2014, Kajantie2019}. In Switzerland, while the majority of the patients have positive outcomes, 21\% show some form of cognitive impairment, particularly in short term memory \citep{Pittet-Metrailler2019a}.  Understanding the neurological underpinnings of these difficulties is thus crucial to identify potential interventions and establish critical periods to restore typical development \citep{Wolke2019}.
 
 % Introduce fMRI as an ideal tool to study it
- Functional magnetic resonance imaging (fMRI) is a powerful tool to characterise brain function in a non-invasive fashion and is, therefore, ideal to investigate the neurological substrate of clinical outcomes in the young population. Typically relying on the Blood-Oxygenation-Level Dependent signal, it indirectly measures brain activity with exceptional spatial specificity due to its signal reliability, high spatial resolution and reproducibility. Thanks to this technique, it is now known that brain activity intrinsically oscillates in a highly organised way in rest \citep{Damoiseaux2006}, and during performance of tasks \citep{Elliott2019}. This has promoted discoveries linking brain function and the performance of cognitive demanding tasks in several domains of cognitive neuroscience \citep{Raichle2001, Poldrack2012, DEsposito2016}. 
+ Functional magnetic resonance imaging (fMRI) is a powerful tool to characterise brain function in a non-invasive fashion and is, therefore, ideal to investigate the neurological basis of clinical outcomes in the young population. Typically relying on the blood oxygenation level dependent signal, it indirectly measures brain activity with exceptional spatial specificity due to its signal reliability, high spatial resolution for a non-invasive method, and reproducibility. Thanks to this technique, it is now known that brain activity intrinsically oscillates in a highly organised way in rest \citep{Damoiseaux2006}, and during performance of tasks \citep{Elliott2019}. This has promoted discoveries linking brain function and the performance of cognitive demanding tasks in several domains of cognitive neuroscience \citep{Raichle2001, Poldrack2012, DEsposito2016}. 
  
-fMRI is, in many ways, well-suited to investigate paediatric populations, especially since robust measures of functional activation and connectivity can be obtained from short scanning sessions. It has been successfully employed in studies involving young cohorts tapping into language \citep{Centeno2014, Pigdon2020}, sensory-motor functions \citep{Zwicker2011, Sgandurra2018}, attention \citep{Somandepalli2015, Jiang2019, Harrewijn2020}, memory \citep{Mankinen2015, DeBie2015}, affective processing \citep{Loveland2008, McRae2012}, working memory \citep{Siffredi2017, Yaple2018}, and executive function \citep{Wang2013, Staphorsius2015}. All of these abilities are more likely to be impaired in preterm-born than in term-born individuals, highlighting fMRI's fitness to study this population. Indeed, studies using this technique have uncovered altered functional brain responses in regions underlying executive functions in preterm-born children, in frontal \citep{Murner-Lavanchy2014} and temporal areas \citep{Kwon2014a, Wilke2014} which were shown to be linked to impaired language performance at age 14\textendash15 \citep{Wilke2014}.
+FMRI is, in many ways, well-suited to investigate paediatric populations, especially since robust measures of functional activation and connectivity can be obtained from short scanning sessions. It has been successfully employed in studies involving young cohorts tapping into language \citep{Centeno2014, Pigdon2020}, somatomotor \citep{Zwicker2011, Sgandurra2018}, attention \citep{Somandepalli2015, Jiang2019, Harrewijn2020}, memory \citep{Mankinen2015, DeBie2015}, affective processing \citep{Loveland2008, McRae2012}, working memory \citep{Siffredi2017, Yaple2018}, and executive functions \citep{Wang2013, Staphorsius2015}. All of these abilities are more likely to be impaired in preterm- than in term-born individuals, highlighting fMRI's fitness to study this population. Indeed, this technique has uncovered altered brain responses in regions underlying executive functions in preterm-born children in frontal \citep{Reveillon2013,Murner-Lavanchy2014} and temporal areas \citep{Kwon2014a, Wilke2014} which were linked to impaired language performance at age 14\textendash15 \citep{Wilke2014}.
   
-Recently, fMRI studies have shown that the brain (co-)activation is highly dynamic, fluctuating between large-scale brain states formed by simultaneous activation of different subsets of brain regions during rest \citep{Chang2010, Preti2017, Liu2018} and task performance \citep{Di2015, Cheng2018}. Crucially, features of these moment-to-moment fluctuations of brain configuration have very recently been discovered to be linked to cognitive ability in humans, both during rest \cite{Chen2019} and while performing attentional tasks \cite{Fong2019}. These findings indicate the high potential of brain dynamics as an avenue to further characterise the effects of prematurity in the brain, additionally shedding light on how they relate to cognitive outcomes in those who were born too soon. 
+Recently, fMRI studies have shown that the brain activity is highly dynamic, fluctuating between large-scale brain states formed by simultaneous activation of different subsets of brain regions during rest \citep{Chang2010, Preti2017, Liu2018} and task performance \citep{Di2015, Cheng2018}. Crucially, features of these moment-to-moment fluctuations of brain configuration have very recently been discovered to be linked to cognitive ability in humans, both during rest \cite{Chen2019} and while performing attentional tasks \cite{Fong2019}. These findings indicate the high potential of brain dynamics as an avenue to further characterise the effects of prematurity in the brain, additionally shedding light on how they relate to cognitive outcomes in those who were born too soon. 
  
 
 
@@ -49,7 +49,7 @@ Since all of these studies were achieved thanks to a collaboration involving lar
 
 \subsection*{Chapter \ref{chapter:ch3}: BOLD signal variability and dynamic spontaneous brain function in the preterm-born}
 Although brain analysis methods often rely on measuring and comparing the average activity in certain areas of interest, blood oxygenation level dependent (BOLD) signal variability has been shown to yield additional information on brain function that is linked to cognitive abilities.
-To the best of my knowledge, no one has investigated BOLD signal variability in preterm-born populations. In this chapter, I look into functional brain dynamics in two ways: first, in terms of voxelwise BOLD signal variability and its relationship with gestational age and age at assessment. Secondly, I perform a seed-based co-activation pattern analysis focusing on the anterior cingulate cortex, an area previously known to be affected by preterm-birth that was also highlighted in the analysis of BOLD variability. 
+To the best of my knowledge, no one has investigated BOLD signal variability in preterm-born populations. In this chapter, I look into functional brain dynamics in two ways: first, in terms of voxelwise BOLD signal variability and its relationship with gestational age and age at assessment. Secondly, I perform a seed-based co-activation pattern analysis focusing on the dorsal anterior cingulate cortex, an area previously described to be affected by preterm-birth \citep{White2014,Daamen2015,Lordier2019} that was also highlighted in the analysis of BOLD variability. 
 
 \subsubsection*{Section \ref{section:ch3_BOLDvar_paper}: \textit{(Journal Article)} Altered BOLD variability development and brain dynamics in preterm-born young adolescents}
 \textit{Is the development of BOLD signal variability affected by preterm birth?}\\
@@ -74,7 +74,7 @@ The typical approach to understand the neural underpinnings of cognition is to i
 \textit{Are preterm-born young adolescents able to perform a reality filtering task?}\\
 \textit{What are the neural processes underlying reality filtering in preterm-born young adolescents?}
 
-Because the prefrontal cortex ––– of which the OFC is a constituting part ---  is known to be affected by preterm birth in several ways, we wanted to investigate both whether preterm-born young adolescents are capable of reality filtering and, if this is the case, whether the OFC is involved. Using the same task as in the previous section, we found that although children in the preterm group were able to perform the task with comparable accuracy to the fullterm group, the levels of OFC activation in the former group are lower. This suggests that preterm-born individuals may have developed mechanisms to optimise OFC activity such that they are still able to perform the task without depending on the same level of activation as the control group.
+Because the prefrontal cortex ––– of which the OFC is a constituting part ---  is known to be affected by preterm birth in several ways, we wanted to investigate both whether preterm-born young adolescents are capable of reality filtering and, if this is the case, whether the OFC is involved. Using the same task as in the previous section, we found that although children in the preterm group were able to perform the task with comparable accuracy to the fullterm group, the levels of OFC activation in the former group are lower and no other regions were more activated than in controls. This suggests that preterm-born individuals may have developed mechanisms to optimise OFC activity such that they are still able to perform the task without depending on the same level of activation as the control group.
 
 
 % Description of Chapter 5 - PPI-CAPs paper?
@@ -89,10 +89,10 @@ While typical task-based studies compare and contrast how brain activity changes
 
 Previous studies have shown that relevant information on brain function is condensed in specific moments of high amplitude peaks in the BOLD signal \citep{Tagliazucchi2011a}, meaning that large parts of the fMRI time series contain information that does not necessarily add information for certain analyses. This means the fMRI data can reduce to a point-process \citep{Tagliazucchi2012} characterised by a sequence of time points when a seed signal traverses a given threshold. If these points are then averaged, one obtains patterns of co-activation with a seed that are recurring throughout the experiment, at a single-frame resolution \citep{Liu2013}.
 
-In this article I develop a seed-based method called Psychophysiological Interactions of Co-Activation Patterns (PPI-CAPs) to investigate such dynamic modulations of functional brain connectivity in a task-based context. In a naturalistic setting where participants watched a TV program, several patterns of co-activation were yielded using a posterior cingulate cortex seed whose occurrence rates and polarity varied depending on the context; on the seed activity; or on an interaction between the two. Moreover, this method exposed the consistency in effective connectivity patterns across subjects and time, allowing us to uncover links between PPI-CAPs and specific stimuli contained in the video. The main contribution of this study was revealing that explicitly tracking connectivity pattern transients is paramount to advance our understanding of how different brain areas dynamically communicate when presented with a set of cues. Given its ability to concentrate the analysis on very limited amounts of data, this represents a promising avenue for further study of dynamic features of task-modulated brain function in clinical or young populations, such as the preterm-born young adolescents most of this thesis concentrates on. 
+In this article I develop a seed-based method called Psychophysiological Interactions of Co-Activation Patterns (PPI-CAPs) to investigate such dynamic modulations of functional brain connectivity in a task-based context. In a naturalistic setting where participants watched a TV program, several patterns of co-activation were yielded using a posterior cingulate cortex seed --- chosen due to its well documented connectivity arrangements \citep{Liu2013a, Karahanoglu2015a,Lin2017} and description as a hub region \citep{Andrews-hanna2010} ---, whose occurrence rates and polarity varied depending on the context; on the seed activity; or on an interaction between the two. Moreover, this method exposed the consistency in effective connectivity patterns across subjects and time, allowing us to uncover links between PPI-CAPs and specific stimuli contained in the video. The main contribution of this study was revealing that explicitly tracking connectivity pattern transients is paramount to advance our understanding of how different brain areas dynamically communicate when presented with a set of cues. Given its ability to concentrate the analysis on very limited amounts of data, this represents a promising avenue for further study of dynamic features of task-modulated brain function in clinical or young populations, such as the preterm-born young adolescents most of this thesis concentrates on. 
 
 
 \subsection*{Section \ref{section:ppicaps_preterm}: \textit{(Journal Article)} "Tracking moment-to-moment functional connectivity in preterm-born young adolescents during movie watching and emotion regulation"}
 \textit{Do preterm-born young adolescents present altered configurations of task-related functional dynamics as compared to fullterm-born controls?}
 
-Having shown that PPI-CAPs is a compelling avenue for the study of dynamic features of context-driven brain function in clinical populations \citep{Freitas2020} in Section \ref{section:ppicaps_method}, I then proceed to employ this approach to study dynamic connectivity in preterm-born young adolescents as compared to age-matched controls. To this end, our participants undergo a block-type task which alternates between moments of movie watching --- where the films have an emotional valence (\textit{i.e.}, amusing or repulsive) to them ---  followed by moments of emotion regulation and concentration on their own breathing. \add{add study's conclusion}
+Having shown that PPI-CAPs is a compelling avenue for the study of dynamic features of context-driven brain function in clinical populations \citep{Freitas2020} in Section \ref{section:ppicaps_method}, I then proceed to employ this approach to study dynamic connectivity in preterm-born young adolescents as compared to age-matched controls. To this end, our participants undergo a block-type task which alternates between moments of movie watching --- where the films have an emotional valence (\textit{i.e.}, amusing or repulsive) to them ---  followed by moments of emotion regulation and concentration on their own breathing. We recover six robust and reoccurring patterns of co-activation with a dorsal anterior cingulate cortex seed. Moreover, we show that several of the data-driven patterns have a seed, task, or group main effects, as well as interactions between those. This study further highlights the importance of investigating task-driven brain dynamics in the context of clinical populations to obtain a more accurate picture of healthy and altered brain function.
