--- a/main/ch2_background.tex
+++ b/main/ch2_background.tex
@@ -187,8 +187,7 @@ Similar to the resting state, activation time courses upon the execution of a ta
 
 \section{Preterm birth}\label{sub:preterm}
 
-A birth is defined as preterm (PT) when delivery occurs after less than 37 completed gestational weeks, in contrast to the expected duration of 40 weeks, on average, in a healthy pregnancy. This can be further characterised as a moderate to late PT (32---36 weeks), very PT (28---31 weeks),  or extremely PT ($\leq$ 27 weeks). Moreover, it can be distinguished between \textit{indicated preterm birth}, in which labour is initiated through medical intervention due to dangerous pregnancy complications, and \textit{spontaneous preterm birth}, which occurs as a result of natural preterm labour or rupture of fetal membranes, and no identifiable cause --- such as bleeding, infection or inflammation --- can be found  \citep{Behrman2007}. The work presented later in this thesis relates to the latter case. 
-
+A birth is defined as preterm (PT) when delivery occurs after less than 37 completed gestational weeks, in contrast to the expected duration of 40 weeks, on average, in a healthy pregnancy. This can be further characterised as a moderate to late PT (32---36 weeks), very PT (28---31 weeks),  or extremely PT ($\leq$ 27 weeks). These conditions have been associated with a wide range of behavioural, cognitive and neuropsychological difficulties that have been identified at various stages in life. In the sections below, I provide an overview of the challenges brought by preterm birth to the child, their family, and society as a whole. I then explain the problems preterm-born individuals are at higher risk of facing later in life, what has been found out to date, and identify a gap in the literature regarding investigations of dynamic brain function in this population, which this thesis aims to fill. 
 
 
 \subsection{The global challenge of prematurity}
@@ -201,20 +200,18 @@ Additionally, with the continuous improvements in medical treatment, the rates o
 Besides the consequences to the children's health and behaviour, this increase is expected to escalate the economical impact of PT birth not only in the short term (\textit{i.e.,} immediate medical care), but also in the longer term. 
 In fact, according to the Institute of Medicine of the National Academy of Sciences, special education services related with a higher prevalence of disabling conditions in PT-born children cost U\$1.1 billion yearly in the United States alone, while the lost household and labour market productivity had an impact of approximately U\$5.7 billion \citep{Behrman2007}. % https://www.ncbi.nlm.nih.gov/books/NBK11358/
 
-A pressing issue in the study of the neurodevelopmental effects of preterm birth is that, although most of the global burden of preterm birth is shouldered by low- and middle-income countries, only a tiny portion of the currently available research evidence for their prevention and treatment come from these settings \citep{Smid2016}. However, since high-income countries tend to offer more funding for research and have better facilities, investigations in these regions of potential biomarkers for targeted intervention that improves clinical outcomes in this population are also of utmost importance. 
 
-% https://www.who.int/news-room/fact-sheets/detail/preterm-birth
 
 
 
 \subsection{Behavioural consequences of preterm birth}
 
-Preterm birth puts children at a considerably higher risk of developing a broad range of cognitive deficits \citep{Brydges2018}. % \Vandewouw et al, Human Brain Mapping, 2019
+Preterm birth puts children at a considerably higher risk of developing a broad range of cognitive deficits \citep{Brydges2018, Twilhaar2018}. % \Vandewouw et al, Human Brain Mapping, 2019
 By school age, up to 50\% of these children develop cognitive, language, or socio-emotional disabilities that are likely linked to neurological abnormalities starting before birth, lasting through life and into adulthood \citep{Gozzo2009, Chaminade2013, Moiseev2014, Hornman2016, Thomason2017, Burnett2018}.
 
 A meta-analysis of cognitive outcomes in more than 6000 children and teenagers born very preterm \citep{Brydges2018} showed that they scored significantly lower on intelligence tests; measures of executive functioning; and processing speed, as compared to their term born peers across a wide range of ages (4--17). This study found no association between the children's age at assessment and cognitive impairment, indicating that very preterm born children fail to catch up with term born ones throughout childhood and adolescent. In that sense, it seems that the differences between the two groups are due to a deficit in PT children, rather than a delay \citep{Brydges2018}. This is in line with \citep{Linsell2018}'s study, which found that cognitive function did not recover or deteriorate between infancy and adulthood in extremely preterm individuals, and explain why \citep{Doyle2010} find long-lasting effects of extremely preterm birth in an adult cohort. Importantly, socio-economic status at birth has been shown to affect IQ scores in adults born very preterm \citep{Breeman2017}, and to modify the relationship between early-life events and neurodevelopmental outcomes in preterm born children. Further understanding these complex relationships may shed light into potential avenues for promoting improved outcomes for infants at higher risk of neurodevelopmental issues \citep{Benavente-Fernandez2020}. 
 
-Besides difficulties in executive functions, children who were born prematurely are also at a higher risk for socio-emotional disabilities \citep{Zmyj2017}, with impaired interactions being present in relationships with family, teachers and friends \citep{Twilhaar2019}. In particular, PTB children are less likely to initiate and respond to peers' efforts to participate in joint attention \citep{Zmyj2017}, which may aggravate later later social cognition impairments and thus hinder social interaction skills. Whether these differences in social competences are a product of faulty or delayed maturation remains a topic for debate: some studies point towards the former hypothesis, since these effects have also been found in individuals through adolescence  \citep{Healy2013, Saigal2016}; while others put it down to a maturational lag, with findings that PTB children catch up with their full term peers by the age of 5 \citep{Witt2018}. These inconsistencies emphasise the complexity of the effects of preterm birth and the importance of further characterising the link between brain and behaviour.
+Besides difficulties in executive functions, children who were born prematurely are also at a higher risk for socio-emotional disabilities \citep{Zmyj2017}, with impaired interactions being present in relationships with family, teachers and friends \citep{Twilhaar2019}. In particular, PTB children are less likely to initiate and respond to peers' efforts to participate in joint attention \citep{Zmyj2017}, which may aggravate later social cognition impairments and thus hinder social interaction skills. Whether these differences in social competences are a product of faulty or delayed maturation remains a topic for debate: some studies point towards the former hypothesis, since these effects have also been found in individuals through adolescence  \citep{Healy2013, Saigal2016}; while others put it down to a maturational lag, with findings that PTB children catch up with their full term peers by the age of 5 \citep{Witt2018}. These inconsistencies emphasise the complexity of the effects of preterm birth and the importance of further characterising the link between brain and behaviour.
 
 The most recent research indicates cognitive control impairment as a central basis for social problems in PTB adolescents \citep{Twilhaar2019}. This finding further highlights the importance of understanding the neural substrate of cognitive disabilities in this population, with a view to detecting potential targets for early intervention. 
 
@@ -250,13 +247,10 @@ With the wide range of behavioural alterations related to PT birth, it is no sur
 A recent meta-analysis involving more than sixty-four thousand children found that prematurity of any degree affects neurodevelopment, and that these adverse effects persist at various follow up stages \citep{Allotey2018}. 
 
 
--> Insert paragraph on effects on Brain responses
-\add{Fill in this section with effects of PTB on brain activation}
 
-
-Several studies have investigated structural differences in preterm-born children \citep{Huppi1998b, Brown2014, Kersbergen2014, KostovicSrzentic2019}, but Functional Connectivity has only been popularised in this population over the last decade, with studies primarily relying on resting-state static analysis. 
+Several studies have investigated structural differences in preterm-born children \citep{Huppi1998b, Brown2014, Kersbergen2014, KostovicSrzentic2019}, but functional activation and connectivity has only been popularised in this population over the last decade, with studies primarily relying on resting-state static analysis. 
 Fransson et al. (\citeyear{Fransson2007}) were the first to show the presence of resting-state networks (RSNs) in the preterm, which were later found to be similar to those found in adults \citep{Doria2010}. 
-Notably, different RSNs formed at different rates during gestation. Many studies identified an incomplete set of RSNs in preterm subjects at term-equivalent age, although not all compared them to term-born controls \citep{Lin2008, Fransson2007, Fransson2011, Gao2015}.
+Notably, different RSNs formed at different rates during gestation. Many studies identified an incomplete set of RSNs in preterm subjects at term-equivalent age, although not all compared them to term-born controls \citep{Lin2008, Fransson2007, Fransson2011, Gao2015, Lordier2019}.
 Additionally, alterations in the functional connectivity between and within RSNs were found in infants \citep{Gozdas2018} and adolescents \citep{Wehrle2018} born very preterm , providing evidence for the long-lasting impact that very PT birth has on the organisation of the brain \citep{Damaraju2010,White2014,Johns2019}. 
 
 Common to all of the studies mentioned above, was the stationary aspect of the analysis and the use of a resting-state approach. 
