--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -138,6 +138,22 @@ volume = {9},
 year = {2014}
 }
 
+
+@article{Amico2018,
+author = {Amico, Enrico and Go{\~{n}}i, Joaqu{\'{i}}n},
+doi = {10.1162/netn_a_00049},
+issn = {2472-1751},
+journal = {Network Neuroscience},
+month = {sep},
+number = {3},
+pages = {306--322},
+title = {{Mapping hybrid functional-structural connectivity traits in the human connectome}},
+url = {https://www.mitpressjournals.org/doi/abs/10.1162/netn{\_}a{\_}00049},
+volume = {2},
+year = {2018}
+}
+
+
 @article{Anderson2004,
 author = {Anderson, M. C.},
 doi = {10.1126/science.1089504},
@@ -3825,6 +3841,17 @@ url = {https://onlinelibrary.wiley.com/doi/epdf/10.1002/hbm.21513 http://doi.wil
 volume = {34},
 year = {2013}
 }
+@article{Pierrat2017,
+author = {Pierrat, V{\'{e}}ronique and Marchand-Martin, Laetitia and Arnaud, Catherine and Kaminski, Monique and Resche-Rigon, Matthieu and Lebeaux, C{\'{e}}cile and Bodeau-Livinec, Florence and Morgan, Andrei S and Goffinet, Fran{\c{c}}ois and Marret, St{\'{e}}phane and Ancel, Pierre-Yves},
+doi = {10.1136/bmj.j3448},
+issn = {0959-8138},
+journal = {BMJ},
+month = {aug},
+pages = {j3448},
+title = {{Neurodevelopmental outcome at 2 years for preterm children born at 22 to 34 weeks' gestation in France in 2011: EPIPAGE-2 cohort study}},
+url = {http://www.bmj.com/lookup/doi/10.1136/bmj.j3448},
+year = {2017}
+}
 
 @article{Pigdon2020,
 author = {Pigdon, Lauren and Willmott, Catherine and Reilly, Sheena and Conti-ramsden, Gina and Liegeois, Frederique and Connelly, Alan and Morgan, Angela T},
@@ -3839,6 +3866,17 @@ title = {{The neural basis of nonword repetition in children with developmental 
 url = {https://doi.org/10.1016/j.neuropsychologia.2019.107312},
 volume = {138},
 year = {2020}
+}
+
+@article{Pittet-Metrailler2019a,
+author = {Pittet-Metrailler, Marie P. and Mrner-Lavanchy, Ines and Adams, Mark and Graz, Myriam Bickle and Pfister, Riccardo E. and Natalucci, Giancarlo and Grunt, Sebastian and Tolsa, Cristina Borradori and {Swiss National Network and Follow-up Group}},
+doi = {10.4414/smw.2019.20084},
+issn = {1424-3997},
+journal = {Swiss Medical Weekly},
+month = {jun},
+title = {{Neurodevelopmental outcome at early school age in a Swiss national cohort of very preterm children}},
+url = {https://doi.emh.ch/smw.2019.20084},
+year = {2019}
 }
 
 @article{Ploner2009,
@@ -4006,6 +4044,18 @@ pages = {250--263},
 title = {{Partial least squares analysis of neuroimaging data : applications and advances}},
 volume = {23},
 year = {2004}
+}
+
+@article{Reveillon2013,
+author = {R{\'{e}}veillon, Morgane and Urben, S{\'{e}}bastien and Barisnikov, Koviljka and {Borradori Tolsa}, Cristina and H{\"{u}}ppi, Petra S. and Lazeyras, Fran{\c{c}}ois},
+doi = {10.1016/j.nicl.2013.10.007},
+issn = {22131582},
+journal = {NeuroImage: Clinical},
+pages = {429--437},
+title = {{Functional neuroimaging study of performances on a Go/No-go task in 6- to 7-year-old preterm children: Impact of intrauterine growth restriction}},
+url = {https://linkinghub.elsevier.com/retrieve/pii/S221315821300137X},
+volume = {3},
+year = {2013}
 }
 
 @article{Rissman2004,
