--- a/main/ch6_FuturePerspectives.tex
+++ b/main/ch6_FuturePerspectives.tex
@@ -58,5 +58,14 @@ The ultimate goal is to apply novel tools to better understand brain function bo
 
 
 \subsection*{Probing into structure-function relationships}
-While the main goal of this thesis was to focus on the relevance of brain function dynamics for the study of preterm birth, it is important to consider that the brain's underlying structural architecture is very likely to affect brain function. It is thus very difficult to disentangle the two. Graph signal processing (GSP) has recently emerged in the neuroimaging field as a novel framework for brain data analysis that integrates brain structure and function (see \citet{Huang2018} for a broad overview). In this scheme, brain structure is represented in the graph itself, composed by brain regions as nodes and white matter tracts as edges, while brain function is considered in the graph signals. More recently, this concept has been extrapolated from a region-based to a voxel-level perspective, allowing analysis with much finer resolution \citep{Tarun2020}.
+While the main goal of this thesis was to focus on the relevance of brain function dynamics for the study of preterm birth, it is important to consider that the brain's underlying structural architecture is very likely to affect brain function. It is thus very difficult to disentangle the two, and analysing both together may bring relevant, additional information which previous studies had missed. For instance, \citet{Amico2018} demonstrated how an approach combining multimodal canonical correlation as well as joint independent component analysis can be used to investigate structural-functional alterations in clinical populations as compared to healthy controls.
 
+Graph signal processing (GSP) has recently emerged in the neuroimaging field as a novel framework for brain data analysis that integrates brain structure and function (see \citet{Huang2018} for a broad overview). In this scheme, brain structure is represented in the graph itself, composed by brain regions as nodes and white matter tracts as edges, while brain function is considered in the graph signals. More recently, this concept has been extrapolated from a region-based to a voxel-level perspective, allowing analysis with much finer resolution \citep{Tarun2020}.
+
+To the best of our knowledge, all the research involving graph analyses on preterm-born populations to date have focused on analyses that considered only structure of function individually. Therefore, this remains a potential avenue to obtain a better-informed picture of brain function in prematurity.
+
+
+\section{Final remarks}
+
+A pressing issue in the study of the neurodevelopmental effects of preterm birth is that, although most of the global burden of preterm birth is shouldered by low- and middle-income countries (LMICs), only a tiny portion of the currently available research evidence for their prevention and treatment come from these settings \citep{Smid2016}. However, since high-income countries tend to offer more funding for research and in many cases have better facilities at researchers' disposal, investigations in these regions of potential biomarkers for targeted intervention that improves clinical outcomes in this population are also of utmost importance. Once non-invasive interventions such as the ones the \textit{Building the Path to Resilience in Preterm-Born Infants} project --- of which this thesis is a constituting part --- investigates are found, the need for expensive equipment such as MRI machines will become less essential, and LMIC populations will also benefit from them.  
+% https://www.who.int/news-room/fact-sheets/detail/preterm-birth
